<resources>
    <string name="app_name">Converter_app</string>
    <string name="my_converter">My Converter</string>
    <string name="kelvin_to_celcius">Kelvin To Celcius</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="npr_to_dollar">NPR to Dollar</string>
    <string name="enter_npr">Enter NPR</string>
    <string name="result">Result</string>
    <string name="convert">Convert</string>
    <string name="enter_kelvin_temperature">Enter Kelvin Temperature</string>
    <string name="results">Result</string>
    <string name="square_yard_to_square_feet">Square yard To Square Feet</string>
    <string name="enter_square_yard">Enter Square Yard</string>
    <string name="dollar_to_npr">Dollar To NPR</string>
    <string name="enter_dollar">Enter Dollar</string>
    <string name="temperature">Temperature</string>
    <string name="converter_app">Converter App</string>
    <string name="area">Area</string>
    <string name="currency">Currency</string>
    <string name="kelvin_to_celsius" />
    <string name="square_yard_to_square_foot">Square Yard to Square Foot</string>
</resources>